AppSubsystem/BackendECS/v1/cf-ecs-alb.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create a private ALB in 2 AZs with IP and custom security group name, and store outputs in Parameter Store.

Parameters:
  AppShortName:
    Description: Application name in lower case
    Type: String

  EnvName:
    Description: Environment Name
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-stg
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
  
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC ID where the ALB will be created.

  VPCSubnetCidrAZ1:
    Type: String
    Description: VPC Subnet CIDR for App AZ1

  VPCSubnetCidrAZ2:
    Type: String
    Description: VPC Subnet CIDR for App AZ2

  VPCSubnetCidrAZ3:
    Type: String
    Description: VPC Subnet CIDR for App AZ3
    Default: ''

  ALBSubnetIds:
    Type: CommaDelimitedList
    Description: The Subnet IDs for App Subnets where the ECS ALB will be deployed.

  VPCSubnetCidrInternetIngressAlbAZ1:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ1 (optional)
    Default: ''

  VPCSubnetCidrInternetIngressAlbAZ2:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ2 (optional)
    Default: ''

  VPCSubnetCidrInternetIngressAlbAZ3:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ3 (optional)
    Default: ''

  DefaultCertificateArn:
    Type: String
    Description: ARN of the default SSL certificate

  AdditionalCertificateArn:
    Type: String
    Description: ARN of the additional SSL certificate

Conditions:
  IsProduction: !Or 
    - !Equals [!Ref EnvName, prod]
    - !Equals [!Ref EnvName, prod-a]
    - !Equals [!Ref EnvName, prod-b]
    - !Equals [!Ref EnvName, prod-c]
  HasVPCSubnetCidrAZ3: !Not [!Equals [!Ref VPCSubnetCidrAZ3, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ1: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ1, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ2: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ2, '']]
  HasVPCSubnetCidrInternetIngressAlbAZ3: !Not [!Equals [!Ref VPCSubnetCidrInternetIngressAlbAZ3, '']]
  HasAdditionalCertificate: !Not [!Equals [!Ref AdditionalCertificateArn, ""]]

Resources:
  # Security Group for ALB
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub "${AppShortName}-${EnvName}-sg-alb-ecs"
      GroupDescription: Security group for the private ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAZ1
          Description: Allow traffic from NLB in AZ1
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAZ2
          Description: Allow traffic from NLB in AZ2
        - !If
          - HasVPCSubnetCidrAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAZ3
            Description: Allow traffic from NLB in AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ1
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ1
            Description: Allow inbound from Internet Ingress ALB Subnet AZ1
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ2
            Description: Allow inbound from Internet Ingress ALB Subnet AZ2
          - !Ref "AWS::NoValue"
        - !If
          - HasVPCSubnetCidrInternetIngressAlbAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrInternetIngressAlbAZ3
            Description: Allow inbound from Internet Ingress ALB Subnet AZ3
          - !Ref "AWS::NoValue"
      Tags:
        - Key: IaCVersion
          Value: AppSubsystem-BackendECS-v1
          
  # Application Load Balancer
  PrivateALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Name: !Sub "${AppShortName}-${EnvName}-alb-ecs"
      Subnets: !Ref ALBSubnetIds
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Scheme: internal
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Tags:
        - Key: IaCVersion
          Value: AppSubsystem-BackendECS-v1

  # Listener
  HTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: "404 Not Found"
            StatusCode: "404"
      LoadBalancerArn: !Ref PrivateALB
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates: !If 
        - HasAdditionalCertificate
        - - CertificateArn: !Ref DefaultCertificateArn
          - CertificateArn: !Ref AdditionalCertificateArn
        - - CertificateArn: !Ref DefaultCertificateArn

  # Listener Rule for Health Check
  ALBHealthCheckListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Actions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: "ALB HealthCheck is Ok"
            StatusCode: "200"
      Conditions:
        - Field: path-pattern
          Values:
            - /ALBhealth
            - /ALBhealth/*
      ListenerArn: !Ref HTTPSListener
      Priority: 50

  # SSM Parameters
  ALBSecurityGroupIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /${AppShortName}/${EnvName}/ecs-alb-security-group-id
      Type: String
      Value: !Ref ALBSecurityGroup
      Description: ALB Security Group ID

  HTTPSListenerArn:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /${AppShortName}/${EnvName}/alb-https-listener-arn
      Type: String
      Value: !Ref HTTPSListener
      Description: ARN of the HTTPS Listener
